--- a/views/utilisateur_profil.pug
+++ b/views/utilisateur_profil.pug
@@ -8,7 +8,7 @@ block content
   h2 Invitations
   each invitation in invitations
       <li>Invitation pour le #{invitation.date.getDate()}/#{invitation.date.getMonth()}/#{invitation.date.getFullYear()} à #{invitation.date.getHours()}:#{invitation.date.getMinutes()} <a href="parties/#{invitation.id}">Accepter</a> ou <a href="">Refuser</a></li>
-  <h2><a href="">Créer une partie</a></h2>
+  <h2><a href="/partie/#{nom}">Créer une partie</a></h2>
   <a href="/carte/creer">Créer une carte</a>
   <a href="/connexion">Se déconnecter</a>
 
