--- a/views/creerpartie_form.pug
+++ b/views/creerpartie_form.pug
@@ -5,7 +5,7 @@ html
   body
     block content
     h1 Page de création de partie
-    <form action="/partie" method="POST">
+    <form action="/parties" method="POST">
         <div>
             <label for="date">Date</label>
             <input type="date" id="date" name="date"/> 
@@ -28,4 +28,4 @@ html
         <button type="submit">Terminer la partie</button>
     </form>
     span=erreur
-    <a href="/partie">liste des parties</a>
+    <a href="/parties">liste des parties</a>
