--- a/views/utilisateur_profil.pug
+++ b/views/utilisateur_profil.pug
@@ -12,7 +12,7 @@ block content
   h2 Cliquez sur le lien pour entrer dans la salle de jeu
   each partie in parties_acceptees
     <li>Partie du #{partie.date.getDate()}/#{partie.date.getMonth()}/#{partie.date.getFullYear()} à #{partie.date.getHours()}:#{partie.date.getMinutes()}<a href=""></a></li>
-  <h2><a href="/#{id_utilisateur}/creerpartie}">Créer une partie</a></h2>
+  <h2><a href="/utilisateurs/#{id_utilisateur}/creerpartie}">Créer une partie</a></h2>
   <a href="/carte/creer">Créer une carte</a>
   <a href="/connexion">Se déconnecter</a>
 
