--- a/views/creerpartie_form.pug
+++ b/views/creerpartie_form.pug
@@ -5,7 +5,7 @@ html
   body
     block content
     h1 Page de création de partie
-    <form action="/parties" method="POST">
+    <form action="/utilisateurs/#{id_utilisateur}/parties" method="POST">
         <div>
             <label for="date">Date</label>
             <input type="date" id="date" name="date"/> 
@@ -14,16 +14,16 @@ html
             <input type="hidden" id="nom" name="nom" value="#{nom}"/> 
         </div>
         <div>
-            <label for="nom1">joueur 2</label>
-            <input type="text" id="nom1" name="nom1"/> 
+            <label for="courriel1">Invité 1</label>
+            <input type="text" id="courriel1" name="courriel1"/> 
         </div>
         <div>
-            <label for="nom2">joueur 3</label>
-            <input type="text" id="nom2" name="nom2"/> 
+            <label for="courriel2">Invité 2</label>
+            <input type="text" id="courriel2" name="courriel2"/> 
         </div>
         <div>
-            <label for="nom3">joueur 4</label>
-            <input type="text" id="nom3" name="nom3"/> 
+            <label for="courriel3">Invité 3</label>
+            <input type="text" id="courriel3" name="courriel3"/> 
         </div>
         <button type="submit">Terminer la partie</button>
     </form>
