--- a/views/creerpartie_form.pug
+++ b/views/creerpartie_form.pug
@@ -11,6 +11,14 @@ html
             <input type="date" id="date" name="date"/> 
         </div>
         <div>
+            <label for="heure">Heure</label>
+            <input type="number" max="23" min="0" id="heure" name="heure"/> 
+        </div>
+        <div>
+            <label for="minute">Minute</label>
+            <input type="number" max="59" min="0" id="minute" name="minute"/> 
+        </div>
+        <div>
             <input type="hidden" id="nom" name="nom" value="#{nom}"/> 
         </div>
         <div>
