--- a/views/utilisateur_profil.pug
+++ b/views/utilisateur_profil.pug
@@ -3,16 +3,16 @@ extends layout
 block content
   h1 Profil de #{nom}
 
-  p Date aujourd'hui : #{aujourdhui}
+  p Date aujourd'hui : #{aujourdhui.toLocaleString()}
 
   h2 Invitations
   each invitation in invitations
-     <li><a href="parties/#{invitation.id}">Invitation pour le #{invitation.date}</a></li>
+     <li><a href="parties/#{invitation.id}">Invitation pour le #{invitation.date.toLocaleString()}</a></li>
    
   
   h2 Cliquez sur le lien pour entrer dans la salle de jeu
   each partie in parties_acceptees
-    <li><a href="https://timelinegametp3.herokuapp.com?id_partie=#{partie.id}&id_joueur=#{id_utilisateur}">Partie du #{partie.date}</a></li>
+    <li><a href="https://timelinegametp3.herokuapp.com?id_partie=#{partie.id}&id_joueur=#{id_utilisateur}">Partie du #{partie.date.toLocaleString()}</a></li>
   <h2><a href="/utilisateurs/#{id_utilisateur}/creerpartie">Créer une partie</a></h2>
   <a href="/carte/creer">Créer une carte</a>
   <a href="/connexion">Se déconnecter</a>
