--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,10 @@
 doctype html
-<meta http-equiv=refresh content=5>
+
 html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    <META HTTP-EQUIV="Refresh" CONTENT="5">
+
   body
     block content
