--- a/views/utilisateur_profil.pug
+++ b/views/utilisateur_profil.pug
@@ -1,6 +1,6 @@
 html
   head
-    title= title
+    title TimeLine Online
     link(rel='stylesheet', href='/stylesheets/style.css')
     <META HTTP-EQUIV="Refresh" CONTENT="30">
   body
