--- a/views/utilisateur_profil.pug
+++ b/views/utilisateur_profil.pug
@@ -5,7 +5,7 @@ html
     <META HTTP-EQUIV="Refresh" CONTENT="30">
   body
     block content
-    h1 Profil de #{nom}
+    <h1> Profil de #{nom}</h1>
 
     p Date aujourd'hui : #{aujourdhui.toLocaleString()}
 
