--- a/views/creercarte_form.pug
+++ b/views/creercarte_form.pug
@@ -5,7 +5,7 @@ html
   body
     block content
     h1 Page de création de carte
-    <form action="/carte" method="POST">
+    <form action="/cartes" method="POST">
         <div>
             <label for="cue">Cue</label>
             <input type="text" id="cue" name="cue"/> 
