--- a/views/cartes.pug
+++ b/views/cartes.pug
@@ -6,7 +6,7 @@ html
     block content
     h1 les cartes
     each carte in cartes
-      <li>Nom: #{carte.cue} req: #{carte.req}</li>
+      <li>#{carte.cue} date: #{carte.rep}</li>
     
     span=erreur
   
