--- a/views/cartes.pug
+++ b/views/cartes.pug
@@ -6,7 +6,7 @@ html
     block content
     h1 les cartes
     each carte in cartes
-      <li>#{carte.cue} <br> date: #{carte.rep}</li>
+      <li>#{carte.cue} <br> date: #{carte.rep} <br></li>
     
     span=erreur
   
